<resources>
    <string name="app_name">HourPayCalculator</string>
    <string name="button_configCompany">バイト先編集</string>
    <string name="SpinnerPrompt">選択してください</string>
    <string name="register">登録</string>
    <string name="view_record">記録を見る</string>

    <string name="name_selectsheet_listview">DailyRecord</string>

    <string name="text_record_head">日々の記録</string>

    <string name="text_record_date">日付</string>
    <string name="text_record_start_time">開始時刻</string>
    <string name="text_record_end_time">終了時刻</string>


    <string name="name_company_listview">CompanyConfig</string>

    <string name="text_company_head">バイト先一覧</string>

    <string name="text_company_hourpay">時給</string>
    <string name="button_addCompany">バイト先追加</string>
    <string name="company_name">企業名</string>
    <string name="hour_pay">時給</string>


</resources>
