<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp">

    <!-- 品名 -->
    <TextView
        android:id="@+id/id_record_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- タイトル：日付 -->
        <TextView
            android:id="@+id/id_record_date_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text_record_date"
            android:textSize="14sp" />

        <!-- データ表示用：日付 -->
        <TextView
            android:id="@+id/id_record_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- タイトル：開始時刻 -->

        <!-- データ表示用：開始時刻 -->
        <TextView
            android:id="@+id/id_record_start_time_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text_record_start_time"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/id_record_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textColor="#000000"
            android:textSize="14sp" />

        <!-- タイトル：終了時刻 -->
        <TextView
            android:id="@+id/id_record_end_time_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/text_record_end_time"
            android:textSize="14sp" />

        <!-- データ表示用：終了時刻 -->
        <TextView
            android:id="@+id/id_record_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>